[package]
name = "DrawsNotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-fullstack = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-logger = { git = "https://github.com/DogeDark/dioxus-logger" }
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.193"
uuid = { version = "1.6.1", features = ["v4"], optional = true }

[features]
default = []
ssr = ["dioxus-fullstack/axum", "dep:uuid"]
web = ["dioxus-fullstack/web"]
