[package]
name = "DrawsNotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_once = "0.2.6"
dioxus = { git = "https://github.com/DioxusLabs/dioxus", branch = "main", package = "dioxus", features= ["fullstack", "router"] }
lazy_static = "1.4.0"
log = "0.4.20"
manganis = "0.2.2"
serde = "1.0.193"
surrealdb = {version = "2.0.4", optional = true}
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"

[features]
default = []
server = ["dioxus/server", "dep:surrealdb"]
web = ["dioxus/web"]
